added iloc explanations

--- a/iloc_demonstration.ipynb
+++ b/iloc_demonstration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "2  1000  2000  3000  4000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,6 +144,39 @@
     "print(df.iloc[[0]])\n",
     "print(df.iloc[[1]])\n",
     "print(df.iloc[[2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       1\n",
+      "1     100\n",
+      "2    1000\n",
+      "Name: a, dtype: int64\n",
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "d    4\n",
+      "Name: 0, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# df.iloc[row, column]\n",
+    "\n",
+    "# Get all rows of a column\n",
+    "## Get all rows of the first column\n",
+    "print(df.iloc[:, 0])\n",
+    "\n",
+    "# Get all columns of a row\n",
+    "## Get all columns of the first row\n",
+    "print(df.iloc[0, :])"
    ]
   },
   {
